Lec18 setup ready to go

--- a/src/lec18-svg-graphics/art-board.html
+++ b/src/lec18-svg-graphics/art-board.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type="text/css" href="./style.css">
     </head>
     <body>
-        <svg id="display"></svg>
+        <svg id="artboard"></svg>
         <div id="console"></div>
         <script src="./app-script.ts"></script>
     </body>
