--- a/src/lec20-subtypes/dots.html
+++ b/src/lec20-subtypes/dots.html
@@ -6,6 +6,6 @@
     <body>
         <svg id="artboard"></svg>
         <div id="console"></div>
-        <script src="./lights-script.ts"></script>
+        <script src="./dots-script.ts"></script>
     </body>
 </html>
