Update title of html

--- a/src/ps05-emoji/emoji.html
+++ b/src/ps05-emoji/emoji.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Intro to CS - Graphics</title>
+        <title>COMP110 - PS05 - Emoji</title>
         <link rel="stylesheet" type="text/css" href="./style.css">
     </head>
     <body>
