--- a/src/ps06-compstagram/compstagram.html
+++ b/src/ps06-compstagram/compstagram.html
@@ -1,44 +1,48 @@
 <!-- This template is pulled from: https://getbootstrap.com/docs/4.0/getting-started/introduction/ -->
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>Compstagram</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
-  </head>
-  <body>
-    
-    <div class="container">
-        <h1>
-          COMPSTAGRAM 
-            <label class="btn btn-dark btn-lg">
-            Change Image <input id="imageSelect" type="file" style="display: none">
-          </label>
-        </h1>
-        <canvas id="viewport"></canvas>
-        <div id="filters" class="filters"></div>
-        <div class="actions">
-          <div class="add-filter">
-            <div class="form-row">
-              <div class="col">
-                  <select id="filterSelect" class="form-control"></select>
-              </div>
-              <div class="col">
-                  <button id="filterAddButton" class="btn btn-dark">Add Filter</button>
-              </div>
-            </div>
-          </div>
-          <div class="save">
-            <button class="btn btn-success">Save</button>
-          </div>
-        </div>
+
+<head>
+  <title>Compstagram</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="./style.css">
+</head>
+
+<body>
+
+  <div class="container">
+    <h1>
+      COMPSTAGRAM
+      <label class="btn btn-dark btn-sm">
+        Image
+        <input id="imageSelect" type="file" style="display: none">
+      </label>
+    </h1>
+    <img id="defaultImage" src="./default.jpg" />
+    <canvas id="viewport"></canvas>
+    <div id="filters" class="filters"></div>
+
+    <div class="actions row form-inline">
+      <div class="form-group">
+          <select id="filterSelect" class="form-control"></select>
+      </div>
+      <div class="add-filter form-group">
+          <button id="filterAddButton" class="btn btn-dark">Add Filter</button>
+      </div>
+      <div class="save form-group">
+        <a id="save" class="btn btn-success" href="">Save</a>
+      </div>
     </div>
 
-    <!-- Project's TypeScript (Note, you can link to different typescript files from different pages.) -->
-    <script src="./compstagram-script.ts"></script>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-load-image/2.17.1/load-image.all.min.js"></script>
+  <script src="./compstagram-script.ts"></script>
 </body>
+
 </html>
