Closer to ready for publish

--- a/src/ps06-compstagram/compstagram.html
+++ b/src/ps06-compstagram/compstagram.html
@@ -1,4 +1,5 @@
-<!-- This template is pulled from: https://getbootstrap.com/docs/4.0/getting-started/introduction/ -->
+<!-- You should not modify this HTML file for the purposes of this project. -->
+
 <!doctype html>
 <html lang="en">
 
@@ -14,7 +15,6 @@
 </head>
 
 <body>
-
   <div class="container">
     <h1>
       COMPSTAGRAM
@@ -26,21 +26,18 @@
     <img id="defaultImage" src="./default.jpg" />
     <canvas id="viewport"></canvas>
     <div id="filters" class="filters"></div>
-
     <div class="actions row form-inline">
       <div class="form-group">
-          <select id="filterSelect" class="form-control"></select>
+        <select id="filterSelect" class="form-control"></select>
       </div>
       <div class="add-filter form-group">
-          <button id="filterAddButton" class="btn btn-dark">Add Filter</button>
+        <button id="filterAddButton" class="btn btn-dark">Add Filter</button>
       </div>
       <div class="save form-group">
         <a id="save" class="btn btn-success" href="">Save</a>
       </div>
     </div>
-
   </div>
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-load-image/2.17.1/load-image.all.min.js"></script>
   <script src="./compstagram-script.ts"></script>
 </body>
