--- a/src/ps06-compstagram/compstagram.html
+++ b/src/ps06-compstagram/compstagram.html
@@ -40,6 +40,12 @@
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-load-image/2.17.1/load-image.all.min.js"></script>
   <script src="./compstagram-script.ts"></script>
+  <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-280336-13', 'auto');
+    ga('send', 'pageview');</script>
 </body>
 
 </html>
